--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -3,7 +3,7 @@
     <h3>
       投稿する
     </h3>
-    <input placeholder="Nickname" type="text" name="name">
+    <input placeholder="タイトル" type="text" name="title">
     <input placeholder="Image Url" type="text" name="image">
     <textarea cols="30" name="text" placeholder="text" rows="10"></textarea>
     <input type="submit" value="SENT">
