--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -4,6 +4,7 @@
       投稿する
     </h3>
     <input placeholder="タイトル" type="text" name="title">
+    <input placeholder="サブタイトル 30文字以下" type="text" name="title_info">
     <input placeholder="Image Url" type="text" name="image">
     <textarea cols="30" name="text" placeholder="text" rows="10"></textarea>
     <input type="submit" value="SENT">
