--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -25,6 +25,11 @@
   text-align: center;
 }
 
+.title{
+  text-decoration: none;
+  color: rgb(17, 0, 255);
+}
+
 .sub-title{
   padding-top: 20px;
   font-size: 25px;
