--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -15,7 +15,7 @@
   <% @tweets.each do |tweet|%>
   <div class="comment-list">
     <div class="title">
-    <%= link_to "#{tweet.title}","/tweets/new",class: "title"%>
+    <%= link_to "#{tweet.title}","/tweets/#{tweet.id}",class: "title"%>
     </div>
     <div class="sub-title">
       <%= tweet.title_info %>
