--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,12 +1,17 @@
 <div class="contents row">
-  <%= form_tag('/tweets', method: :post) do %>
-    <h3>
-      投稿する
-    </h3>
-    <input placeholder="タイトル" type="text" name="title">
-    <input placeholder="サブタイトル 30文字以下" type="text" name="title_info">
-    <input placeholder="Image Url" type="text" name="image">
-    <textarea cols="30" name="text" placeholder="text" rows="10"></textarea>
-    <input type="submit" value="SENT">
-  <% end %>
+  <div class="container">
+    <%= form_tag('/tweets', method: :post) do %>
+      <h3>
+        投稿する
+      </h3>
+      <input placeholder="タイトル" type="text" name="title">
+      <input placeholder="サブタイトル 30文字以下" type="text" name="title_info" class="sub_title">
+      <input placeholder="Image Url" type="text" name="image">
+      <textarea cols="30" name="text" placeholder="text" rows="10"></textarea>
+      <input type="submit" value="SENT">
+    <% end %>
+    <div class="back">
+      <%= link_to "戻る",root_path%>
+    </div>
+  </div>
 </div>
