--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,11 +1,13 @@
 <div class="contents row">
-  <div class="container">
+  <div class="containe_r">
     <%= form_tag('/tweets', method: :post) do %>
       <h3>
         投稿する
       </h3>
       <input placeholder="タイトル" type="text" name="title">
-      <input placeholder="サブタイトル 30文字以下" type="text" name="title_info" class="sub_title">
+      <input placeholder="高校A" type="text" name=a_score>
+      <input placeholder="高校B" type="text" name=b_score>
+      <input placeholder="サブタイトル 30文字以下" type="text" name="title_info">
       <input placeholder="Image Url" type="text" name="image">
       <textarea cols="30" name="text" placeholder="text" rows="10"></textarea>
       <input type="submit" value="SENT">
