--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -8,6 +8,12 @@
   position: relative;
 }
 
+.image{
+  position: absolute;
+  left: 30%;
+  bottom: 5%;
+}
+
 .send_btn{
   font-size: 20px;
   position: absolute;
@@ -20,8 +26,8 @@
 
 .comment-list{
   margin-top: 100px;
-  background-color: #8dabb6;
-  font-size: 35px;
+  background-color: #bbb8b8f3;
+  font-size: 25px;
   text-align: center;
 }
 
@@ -36,5 +42,5 @@
 
 .sub-title{
   padding-top: 20px;
-  font-size: 25px;
+  font-size: 18px;
 }
