--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -8,8 +8,11 @@
 
 <body>
 <header class="header">
-  <h1>日記</h1>
+  <h1>試合記事</h1>
   <%= link_to "投稿する", "/tweets/new" ,class: "send_btn"%>
+  <div class="image">
+    <img src="https://marcoro.jp/large/l_yakyuu_004.png" width="100" height="100">
+  </div>
 </header>
 <div class="comment">
   <% @tweets.each do |tweet|%>
