--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -8,10 +8,25 @@
   position: relative;
 }
 
-.image{
+.image_1{
   position: absolute;
   left: 30%;
   bottom: 5%;
+}
+
+.image_2{
+  position: absolute;
+  margin-top: 30px;
+}
+
+.image_3{
+  position: absolute;
+  right: 0;
+  margin-top: 30px;
+}
+
+.image_4{
+  margin-top: 30px;
 }
 
 .send_btn{
