--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -10,8 +10,17 @@
 <header class="header">
   <h1>試合記事</h1>
   <%= link_to "投稿する", "/tweets/new" ,class: "send_btn"%>
-  <div class="image">
+  <div class="image_1">
     <img src="https://marcoro.jp/large/l_yakyuu_004.png" width="100" height="100">
+  </div>
+  <div class="image_2">
+    <img src="https://kohacu.com/wp-content/uploads/2018/08/kohacu.com_001578_20180807-768x768.png" width=100 height="100">
+  </div>
+  <div class="image_3">
+    <img src="https://4.bp.blogspot.com/-rWCf6UQZCeM/XNE_fOv-TSI/AAAAAAABSyA/HWidm1tgO_4xEOwOUDfx_DmUDvVplgGAACLcBGAs/s800/sports_baseball_man_asia.png" width="100" height=100>
+  </div>
+  <div class="image_4">
+    <img src="https://sanchanne.com/wp-content/uploads/2019/09/fd72cd69ead1784014d1e58100d9a322.png" width="100" height="100">
   </div>
 </header>
 <div class="comment">
