--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -16,17 +16,16 @@
 
 .image_2{
   position: absolute;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .image_3{
   position: absolute;
   right: 0;
-  margin-top: 30px;
 }
 
 .image_4{
-  margin-top: 30px;
+  margin: 30px 0 0 660px;
 }
 
 .send_btn{
@@ -39,11 +38,19 @@
   padding: 5px;
 }
 
+.main-content{
+  background-color: rgb(233, 243, 242);
+}
+
 .comment-list{
-  margin-top: 100px;
+  margin-top: 90px;
   background-color: #bbb8b8f3;
   font-size: 25px;
   text-align: center;
+}
+
+.comment{
+  padding: 0 250px;
 }
 
 .title{
