--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -13,6 +13,8 @@
   <div class="image_1">
     <img src="https://marcoro.jp/large/l_yakyuu_004.png" width="100" height="100">
   </div>
+</header>
+<div class="main-content">
   <div class="image_2">
     <img src="https://kohacu.com/wp-content/uploads/2018/08/kohacu.com_001578_20180807-768x768.png" width=100 height="100">
   </div>
@@ -22,7 +24,6 @@
   <div class="image_4">
     <img src="https://sanchanne.com/wp-content/uploads/2019/09/fd72cd69ead1784014d1e58100d9a322.png" width="100" height="100">
   </div>
-</header>
 <div class="comment">
   <% @tweets.each do |tweet|%>
   <div class="comment-list">
