--- a/app/views/tweets/create.html.erb
+++ b/app/views/tweets/create.html.erb
@@ -3,6 +3,7 @@
     <h3>
     投稿が完了しました
     </h3>
-    <a class="btn" href="/tweets">投稿一覧へ戻る</a>
+  <%= link_to "トップページへ戻る",root_path,class: "btn"%>
   </div>
+    <%# <a class="btn" href="/tweets">投稿一覧へ戻る</a> %>
 </div>
