--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -28,7 +28,7 @@
   <% @tweets.each do |tweet|%>
   <div class="comment-list">
     <div class="title">
-    <%= link_to "#{tweet.title}","/tweets/#{tweet.id}",class: "title"%>
+    <%= link_to "#{tweet.school_a}vs#{tweet.school_b}","/tweets/#{tweet.id}",class: "title"%>
     </div>
     <div class="sub-title">
       <%= tweet.title_info %>
