--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -4,9 +4,10 @@
       <h3>
         投稿する
       </h3>
-      <input placeholder="タイトル" type="text" name="title">
       <input placeholder="高校A" type="text" name=school_a>
+      <input placeholder="高校A 得点" type="text" name=school_a_score>
       <input placeholder="高校B" type="text" name=school_b>
+      <input placeholder="高校B 得点" type="text" name=school_b_score>
       <input placeholder="サブタイトル 30文字以下" type="text" name="title_info">
       <input placeholder="Image Url" type="text" name="image">
       <textarea cols="30" name="text" placeholder="text" rows="10"></textarea>
