--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,6 +1,7 @@
 <div class="text">
   <%= link_to "記事を削除する","/tweets/#{@tweet.id}",method: :delete%>
   <%= link_to "トップページへ戻る",root_path%>
+  <%= link_to "記事を編集する","/tweets/#{@tweet.id}/edit",method: :get %>
   <div class="game_result">
     <%=@tweet.school_a%>
     <%=@tweet.school_a_score%>
