--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,5 +25,4 @@
     <%= f.submit "新規登録",class: "sign_up_btn" %>
   </div>
 <% end %>
-
-<%# <%= render "devise/shared/links" %>
+  <%= link_to "トップページへ戻る",root_path%>
