--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,17 +1,17 @@
 <div class="contents row">
   <div class="containe_r">
-    <%= form_with url: tweets_path,local: true do |f|%>
+    <%= form_with url: tweets_path,local: true do |f| %>
       <h3>
         投稿する
       </h3>
     <%= render 'layouts/error_messages', model: f.object %>
-      <%= f.text_field :school_a,placeholder: "高校A" %>
-      <%= f.text_field :school_a_score,placeholder: "高校A 特点" %>
-      <%= f.text_field :school_b,placeholder: "高校B" %>
-      <%= f.text_field :school_b_score,placeholder: "高校B 得点" %>
-      <%= f.text_field :title_info,placeholder: "サブタイトル" %>
+      <%= f.text_field :school_a,placeholder: "高校A",class: "game_record" %>
+      <%= f.text_field :school_a_score,placeholder: "高校A 得点",class: "game_record" %>
+      <%= f.text_field :school_b,placeholder: "高校B",class: "game_record" %>
+      <%= f.text_field :school_b_score,placeholder: "高校B 得点",class: "game_record" %>
+      <%= f.text_field :title_info,placeholder: "サブタイトル",class: "game_record" %>
       <%= f.text_area :text, cols: 30 ,rows: 10 %>
-      <%=f.submit value: "SENT"%>
+      <%=f.submit value: "SENT",class: "game_record"%>
     <% end %>
     <div class="back">
       <%= link_to "戻る",root_path%>
