--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -29,7 +29,7 @@
   margin: 30px 0 0 660px;
 }
 
-.send_btn{
+.send_btn,.logout_btn{
   font-size: 20px;
   position: absolute;
   left: 0;
@@ -37,6 +37,10 @@
   border: 2px solid #57c3e9;
   color: #57c3e9;
   padding: 5px;
+}
+
+.logout_btn{
+  margin-left: 10%;
 }
 
 html{
@@ -75,6 +79,7 @@ html{
   color: red;
 }
 
+/* ログイン 新規登録 ログアウト ボタン */
 
 .login_btn{
   display: block;
@@ -88,7 +93,6 @@ html{
   opacity: 0.5 ;
 }
 
-/* ログイン 新規登録 */
 .up_btn{
   display: block;
   font-size: 18px;
@@ -110,13 +114,4 @@ h2{
 
 input{
   font-size: 20px;
-}
-
-.sign_up_btn:hover,.devise_login_btn:hover{
-  opacity: 0.5;
-}
-
-.sign_up_btn,.devise_login_btn{
-  margin-bottom: 10px;
-  margin-top: 20px;
 }
