--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -15,4 +15,6 @@
   <div class=texts>
     <%= simple_format(@tweet.text)%>
   </div>
+  <div class="image">
+   <%= image_tag "#{@tweet.image}"%>
 </div>
