--- a/app/views/tweets/destroy.html.erb
+++ b/app/views/tweets/destroy.html.erb
@@ -3,6 +3,6 @@
       <h3>
         削除が完了しました。
       </h3>
-      <%= link_to "トップページへ戻る",root_path%>
+      <%= link_to "トップページへ戻る",root_path,class: "back"%>
     </div>
   </div>
