--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -3,7 +3,8 @@
       <h3>
         編集する
       </h3>
-      <%# <input placeholder="Image Url" type="text" name="image" value="<%= @tweet.image %><%#%" autofocus="true"> %>
+      <h4>画像</h4>
+      <input placeholder="Image Url" type="text" name="image" value="<%= @tweet.image %>" autofocus="true">
       <h4>高校A</h4>
       <input placeholder="高校A" type="text" name=school_a value="<%= @tweet.school_a%>">
       <h4>高校A 得点</h4>
