--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -11,8 +11,10 @@
       <%= f.text_field :school_b_score,placeholder: "高校B 得点",class: "game_record" %>
       <%= f.text_field :title_info,placeholder: "サブタイトル",class: "game_record" %>
       <%= f.text_area :text, cols: 30 ,rows: 10 %>
-      <%=f.label :image,class: 'input-box_image' do %>
-      <%= f.file_field :image, class: 'input-box_image_file',class: "game_record"%>
+      <%= f.label :image, class: "form-image" do %>
+        <h4>画像投稿</h4>
+        <i class="fa fa-image"></i>
+        <%= f.file_field :image, class: 'input-box_image_file'%>
       <% end %>
       <%=f.submit value: "SENT",class: "game_record"%>
     <% end %>
