--- a/app/views/tweets/update.html.erb
+++ b/app/views/tweets/update.html.erb
@@ -3,6 +3,6 @@
       <h3>
         更新が完了しました。
       </h3>
-      <a class="btn" href="/">投稿一覧へ戻る</a>
+      <%= link_to "記事へ戻る","/tweets/#{@tweet.id}",class:"back"%>
     </div>
   </div>
