--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -2,6 +2,9 @@
   <%= link_to "記事を削除する","/tweets/#{@tweet.id}",method: :delete%>
   <%= link_to "トップページへ戻る",root_path%>
   <%= link_to "記事を編集する","/tweets/#{@tweet.id}/edit",method: :get %>
+  <div class="user_name">
+    <%= @nickname%>
+  </div>
   <div class="game_result">
     <%=@tweet.school_a%>
     <%=@tweet.school_a_score%>
