--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -79,6 +79,11 @@ html{
   color: red;
 }
 
+.user_name{
+  position: absolute;
+  margin: 60px 20px 20px;
+}
+
 /* ログイン 新規登録 ログアウト ボタン */
 
 .login_btn{
