--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -19,6 +19,8 @@
 .image{
   margin-top: 120px;
   text-align: center;
+  /* box-shadow: 0 0 10px rgba(41,41,41,0.2); */
+  border-bottom: solid 2px rgb(221, 215, 203);
 }
 
 a:hover{
@@ -36,4 +38,11 @@ h3{
 
 h4{
   margin: 20px 0 5px 0;
+}
+
+.comment_container
+{
+  margin: 0 auto;
+  padding: 30px;
+  width: 50%;
 }
