--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -27,7 +27,11 @@
         <% @comments.each do |comment| %>
           <p>
             <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}" %>：</strong>
-            <%= comment.text %>
+              <%= comment.text %>
+              <div class="comment_at">
+              <%= comment.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
+              </div>
+            </div>
           </p>
         <% end %>
       <% end %>
