--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -34,14 +34,18 @@
   <div class="image_4">
     <img src="https://sanchanne.com/wp-content/uploads/2019/09/fd72cd69ead1784014d1e58100d9a322.png" width="100" height="100">
   </div>
-<div class="comment">
   <% @tweets.each do |tweet|%>
+<div class="comment">
   <div class="comment-list">
     <div class="title">
     <%= link_to "#{tweet.school_a}vs#{tweet.school_b}","/tweets/#{tweet.id}",class: "title"%>
     </div>
     <div class="sub-title">
       <%= tweet.title_info %>
+    </div>
+    <div class="tweets_at">
+      <%= tweet.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
+    </div>
     </div>
   </div>
    <% end %>
