--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -51,3 +51,19 @@ h4{
   color: silver;
   margin-bottom: 20px;
 }
+
+.comment_delete_button
+{
+  display: inline-block;
+  padding: 0.1em 0.5em;
+  text-decoration: none;
+  color: #ff7e67;
+  border: double 4px #0aaee0;
+  border-radius: 3px;
+  transition: .4s;
+  font-size: 15px;
+}
+
+.comment_delete_button:hover{
+  background: #fffbef;
+}
