--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -26,8 +26,11 @@
       <% if @comments %>
         <% @comments.each do |comment| %>
           <p>
-            <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}" %>：</strong>
+            <strong><%= comment.user.nickname %>：</strong>
               <%= comment.text %>
+              <% if user_signed_in? && current_user.id == comment.user_id %>
+                <%= link_to '削除', "/tweets/#{@tweet.id}/comments/#{comment.id}", method: :delete,class: "comment_delete_button" %>
+              <% end %>
               <div class="comment_at">
               <%= comment.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
               </div>
