--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,7 +1,9 @@
 <div class="text">
+  <% if current_user.id == @tweet.user_id%>
   <%= link_to "記事を削除する","/tweets/#{@tweet.id}",method: :delete%>
-  <%= link_to "トップページへ戻る",root_path%>
   <%= link_to "記事を編集する","/tweets/#{@tweet.id}/edit",method: :get %>
+  <% end %>
+  <%= link_to "トップページへ戻る",root_path%>
   <div class="user_name">
     <h4>投稿者 <%= @tweet.user.nickname%></h4>
   </div>
