--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,5 +1,5 @@
 <div class="text">
-  <% if current_user.id == @tweet.user_id%>
+  <% if current_user.id == @tweet.user_id || current_user.admin? %>
   <%= link_to "記事を削除する","/tweets/#{@tweet.id}",method: :delete%>
   <%= link_to "記事を編集する","/tweets/#{@tweet.id}/edit",method: :get %>
   <% end %>
