管理者　編集

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -14,7 +14,7 @@
       <%= link_to "ログアウト", destroy_user_session_path,method: :delete,class: "logout_btn" %>
       <%# <% if current_user.id == current_user.admin %>
       <%= link_to "投稿する", "/tweets/new" ,class: "send_btn"%>
-      <%# <% end %> %>
+      <%# <% end %>
     </div>
   <% else %>
     <div class="sign_in">
