--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -4,16 +4,23 @@
   padding-top: 30px;
 }
 
+.delete-article,.edit-article,.return-top{
+  border: 2px solid #57e963;
+  color: #57e963;
+  padding: 5px;
+}
+
 .sub_title{
   margin-top: 40px;
   text-align: center;
-  font-size: 20px;
-  background-color: darkgray;
+  font-size: 30px;
+  background-color: rgb(216, 230, 27);
 }
 
 .texts{
   margin: 50px 0 0 50px;
   font-size: 20px;
+  line-height: 2.5em;
 }
 
 .image{
