--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,9 +1,11 @@
-<div class="text">
-  <% if current_user.id == @tweet.user_id || current_user.admin? %>
-  <%= link_to "記事を削除する","/tweets/#{@tweet.id}",method: :delete%>
-  <%= link_to "記事を編集する","/tweets/#{@tweet.id}/edit",method: :get %>
-  <% end %>
-  <%= link_to "トップページへ戻る",root_path%>
+<div class="game-article">
+  <div class="choose-btn">
+    <% if current_user.id == @tweet.user_id || current_user.admin? %>
+    <%= link_to "記事を削除する","/tweets/#{@tweet.id}",method: :delete,class: "delete-article"%>
+    <%= link_to "記事を編集する","/tweets/#{@tweet.id}/edit",method: :get,class: "edit-article" %>
+    <% end %>
+    <%= link_to "トップページへ戻る",root_path,class: "return-top"%>
+  </div>
   <div class="user_name">
     <h4>投稿者 <%= @tweet.user.nickname%></h4>
   </div>
@@ -23,7 +25,7 @@
   <div class="image">
    <%= image_tag "#{@tweet.image}"%>
   </div>
-      <div class="comments">   
+    <div class="comments">   
       <h4>＜コメント一覧＞</h4>
       <% if @comments %>
         <% @comments.each do |comment| %>
