--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -45,7 +45,7 @@
     <!-- ここからフォーム -->
     <% if current_user %>
       <%= form_tag("/tweets/#{@tweet.id}/comments", method: :post) do %>
-        <textarea cols="30" name="text" placeholder="コメントする" rows="2"></textarea>
+        <textarea cols="30" name="text" placeholder="コメントを記述" rows="2"></textarea>
         <input type="submit" value="SENT">
       <% end %>
     <% end %>
