--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -14,7 +14,7 @@
   margin-top: 40px;
   text-align: center;
   font-size: 30px;
-  background-color: rgb(216, 230, 27);
+  background-color: #CCCC;
 }
 
 .texts{
@@ -52,10 +52,11 @@ h4{
   margin: 0 auto;
   padding: 30px;
   width: 50%;
+  background-color: #CCFFFF;
 }
 
 .comment_at{
-  color: silver;
+  color: #33CC99;
   margin-bottom: 20px;
 }
 
@@ -69,6 +70,7 @@ h4{
   border-radius: 3px;
   transition: .4s;
   font-size: 15px;
+  margin-top: 10px;
 }
 
 .comment_delete_button:hover{
