--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -56,8 +56,8 @@ color: white;
   margin-left: 10%;
 }
 
-html{
-  background-color: rgb(233, 243, 242);
+.main-content{
+  background-color: rgb(233, 243, 243);
 }
 
 .comment-list{
