--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,5 +1,5 @@
 <div class="top-main">
-  <%= link_to "試合記事",choose_top_index_path,class: "game"%>
-  <%= link_to "戦力分析",choose_top_index_path,class: "analysis"%>
-  <%= link_to "試合予想",choose_top_index_path,class: "expected"%>
+  <%= link_to "試合記事",root_path,class: "game"%>
+  <%= link_to "戦力分析",root_path,class: "analysis"%>
+  <%= link_to "試合予想",root_path,class: "expected"%>
 </div>
