--- a/app/views/tournaments/new.html.erb
+++ b/app/views/tournaments/new.html.erb
@@ -1,5 +1,5 @@
 <div class="contents row">
-  <%= form_with model: @tournament do |f|%>
+  <%= form_with model: @tournament, local: true do |f|%>
     <h3>
     登録する
     </h3>
