--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -7,51 +7,20 @@
 </head>
 
 <body>
-<header class="header">
-  <h1>試合記事</h1>
-</header>
-<div class="main-content">
-  <% if user_signed_in? %>
-      <%= link_to "ログアウト", destroy_user_session_path,method: :delete,class: "logout_btn" %>
-      <%# <% if current_user.id == current_user.admin %>
-      <%= link_to "投稿する", "/tweets/new" ,class: "send_btn"%>
-      <%# <% end %>
-  <% else %>
-    <div class="sign_in">
-      <%= link_to "ログイン",new_user_session_path, class: "login_btn"%>
-      <%= link_to "新規登録",  new_user_registration_path,class: "up_btn"%>
+<%= render :partial=>"tweet"%>
+
+  <% @tournaments.each do |tournament|%>
+    <div class="by_tournament">
+      <%= link_to "#{tournament.name}","/tournaments/#{tournament.id}",class: "title"%>
     </div>
-  <% end %>
-  <div class="images">
-    <div class="image_2">
-      <img src="https://kohacu.com/wp-content/uploads/2018/08/kohacu.com_001578_20180807-768x768.png" width=100 height="100">
-    </div>
-    <div class="image_3">
-      <img src="https://4.bp.blogspot.com/-rWCf6UQZCeM/XNE_fOv-TSI/AAAAAAABSyA/HWidm1tgO_4xEOwOUDfx_DmUDvVplgGAACLcBGAs/s800/sports_baseball_man_asia.png" width="100" height=100>
-    </div>
-    <div class="image_4">
-      <img src="https://sanchanne.com/wp-content/uploads/2019/09/fd72cd69ead1784014d1e58100d9a322.png" width="100" height="100">
-    </div>
-  </div>
+  <%end%>
+
   <%= form_with(url: search_tweets_path, local: true, method: :get, class: "search-form") do |form| %>
   <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
   <%= form.submit "検索", class: "search-btn" %>
   <% end %>
-<% @tweets.each do |tweet|%>
-  <div class="comment">
-    <div class="comment-list">
-      <div class="title">
-      <%= link_to "#{tweet.school_a}vs#{tweet.school_b}","/tweets/#{tweet.id}",class: "title"%>
-      </div>
-      <div class="sub-title">
-        <%= tweet.title_info %>
-      </div>
-      <div class="tweets_at">
-        <%= tweet.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
-      </div>
-    </div>
-  </div>
-<% end %>
+
+ <%= render :partial=>"tweet_show"%>
 </div>
 <%= paginate(@tweets)%>
 </div>
