--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,6 +1,6 @@
 <div class="contents row">
   <div class="containe_r">
-    <%= form_with model: @tweet, local: true do |f| %>
+    <%= form_with url: tweets_path,local: true do |f| %>
       <h3>
         投稿する
       </h3>
