--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -12,10 +12,12 @@
       <%= f.text_field :title_info,placeholder: "サブタイトル",class: "game_record",value: "#{@tweet.title_info}" %>
       <%= f.text_area :text, cols: 30 ,rows: 10,value: "#{@tweet.text}" %>
       <%= f.label "大会選択" %>
-      <%# <%= f.collection_select :tournament_id, @category_parent_array,:id,:name,{},{class: 'tournament_select'} %>
       <%=f.select :tournament_id, options_for_select( @category_parent_array.map{|c| [c[:name], c[:id]]}),{include_blank: "選択してください"}, { class: "parent_category_box", id: "parent_category"}%>
       <%= f.label "学校選択"%>
-      <div class="school"></div>
+      <div class="school">
+      </div>
+      <div class="school2">
+      </div>
       <%= f.label :image, class: "form-image" do %> 
         <h4>画像投稿</h4>
         <i class="fa fa-image"></i>
