--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,23 +1,20 @@
 <div class="contents row">
   <div class="containe_r">
     <%= form_with url: tweets_path,local: true do |f| %>
-      <h3>
+      <h2>
         投稿する
-      </h3>
+      </h2>
     <%= render 'layouts/error_messages', model: f.object %>
-      <%# <%= f.text_field :school_a,placeholder: "高校A",class: "game_record",value: "#{@tweet.school_a}" %> 
-      <%= f.text_field :school_a_score,placeholder: "高校A 得点",class: "game_record",value: "#{@tweet.school_a_score}" %>
-      <%# <%= f.text_field :school_b,placeholder: "高校B",class: "game_record",value: "#{@tweet.school_b}" %> 
-      <%= f.text_field :school_b_score,placeholder: "高校B 得点",class: "game_record",value: "#{@tweet.school_b_score}" %>
-      <%= f.text_field :title_info,placeholder: "サブタイトル",class: "game_record",value: "#{@tweet.title_info}" %>
-      <%= f.text_area :text, cols: 30 ,rows: 10,value: "#{@tweet.text}" %>
       <%= f.label "大会選択" %>
       <%=f.select :tournament_id, options_for_select( @category_parent_array.map{|c| [c[:name], c[:id]]}),{include_blank: "選択してください"}, { class: "parent_category_box", id: "parent_category"}%>
-      <%= f.label "学校選択"%>
-      <div class="school">
-      </div>
-      <div class="school2">
-      </div>
+      <div class="school"></div>
+      <div class="school2"></div>
+      <p>高校A 得点</p>     
+      <%= f.select :school_a_score, options_for_select((1..50).to_a) %>
+      <p>高校B 得点</p>
+      <%= f.select :school_b_score, options_for_select((1..50).to_a) %>
+      <%= f.text_field :title_info,placeholder: "サブタイトル",class: "game_record",value: "#{@tweet.title_info}" %>
+      <%= f.text_area :text, cols: 30 ,rows: 10,value: "#{@tweet.text}" %>
       <%= f.label :image, class: "form-image" do %> 
         <h4>画像投稿</h4>
         <i class="fa fa-image"></i>
