--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -9,7 +9,7 @@
 <body>
 <%= render :partial=>"tweet"%>
 
-  <% @tournaments.each do |tournament|%>
+  <% @category_parent_array.each do |tournament|%>
     <div class="by_tournament">
       <%= link_to "#{tournament.name}","/tournaments/#{tournament.id}",class: "title"%>
     </div>
