投稿機能　編集機能　変更

--- a/app/views/tweets/_tweet_show.html.erb
+++ b/app/views/tweets/_tweet_show.html.erb
@@ -7,6 +7,9 @@
       <div class="sub-title">
         <%= tweet.title_info %>
       </div>
+      <div class="name">
+        <%= "投稿者 #{tweet.user.nickname}"%>
+      </div>
       <div class="tweets_at">
         <%= tweet.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
       </div>
