--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -87,8 +87,14 @@ color: white;
 
 .tweets_at{
   font-size: 11px;
-  margin-top: 10px;
+  margin-top: 10px,0px,0px,auto;
   padding-left: 790px;
+}
+
+.name{
+  font-size: 11px;
+  margin-bottom: 10px;
+  text-align: right;
 }
 
 .pagination{
