--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,26 +1,11 @@
 <div class="contents row">
   <div class="containe_r">
-    <%= form_with url: tweets_path,local: true do |f| %>
+    <%= form_with model: @tweet, local: true do |f| %>
       <h2>
         投稿する
       </h2>
     <%= render 'layouts/error_messages', model: f.object %>
-      <%= f.label "大会選択" %>
-      <%=f.select :tournament_id, options_for_select( @category_parent_array.map{|c| [c[:name], c[:id]]}),{include_blank: "選択してください"}, { class: "parent_category_box", id: "parent_category"}%>
-      <div class="school"></div>
-      <div class="school2"></div>
-      <p>高校A 得点</p>     
-      <%= f.select :school_a_score, options_for_select((1..50).to_a) %>
-      <p>高校B 得点</p>
-      <%= f.select :school_b_score, options_for_select((1..50).to_a) %>
-      <%= f.text_field :title_info,placeholder: "サブタイトル",class: "game_record",value: "#{@tweet.title_info}" %>
-      <%= f.text_area :text, cols: 30 ,rows: 10,value: "#{@tweet.text}" %>
-      <%= f.label :image, class: "form-image" do %> 
-        <h4>画像投稿</h4>
-        <i class="fa fa-image"></i>
-        <%= f.file_field :image, class: 'input-box_image_file',value: "#{@tweet.image}"%>
-      <% end %>
-      <%=f.submit value: "SENT",class: "game_record"%>
+    <%= render partial: 'form',locals: {f: f} %>
     <% end %>
     <div class="back">
       <%= link_to "戻る",root_path%>
