--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,25 +1,34 @@
 <html>
 <head>
-  <title> Sample boad</title>
+  <%# <title> 高校野球</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-    <%= csrf_meta_tags %>
+    <%# <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%# <%= csrf_meta_tags %>
 </head>
 
 <body>
+<div class="main-content">
 <%= render :partial=>"tweet"%>
-
+  <div class="images">
+    <div class="image_2">
+      <img src="https://kohacu.com/wp-content/uploads/2018/08/kohacu.com_001578_20180807-768x768.png" width=100 height="100">
+    </div>
+    <div class="image_3">
+      <img src="https://4.bp.blogspot.com/-rWCf6UQZCeM/XNE_fOv-TSI/AAAAAAABSyA/HWidm1tgO_4xEOwOUDfx_DmUDvVplgGAACLcBGAs/s800/sports_baseball_man_asia.png" width="100" height=100>
+    </div>
+    <div class="image_4">
+      <img src="https://sanchanne.com/wp-content/uploads/2019/09/fd72cd69ead1784014d1e58100d9a322.png" width="100" height="100">
+    </div>
+  </div>
   <% @category_parent_array.each do |tournament|%>
     <div class="by_tournament">
       <%= link_to "#{tournament.name}","/tournaments/#{tournament.id}",class: "title"%>
     </div>
   <%end%>
-
   <%= form_with(url: search_tweets_path, local: true, method: :get, class: "search-form") do |form| %>
   <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
   <%= form.submit "検索", class: "search-btn" %>
   <% end %>
-
  <%= render :partial=>"tweet_show"%>
 </div>
 <%= paginate(@tweets)%>
