--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+<div class="header">
+  <h1>試合記事</h1>
+</div>
 <div class="main-content">
 <%= render :partial=>"tweet"%>
   <div class="images">
