--- a/app/views/analyses/new.html.erb
+++ b/app/views/analyses/new.html.erb
@@ -3,9 +3,11 @@
     <%= form_with model: @analysis,local: true do |f|%>
       <h1>投稿する</h1>
       <h2>大会選択</h2>
-      <div class="school">
-      <%= render 'layouts/error_messages', model: f.object %>
-      <%= render partial: 'form',locals: {f: f} %>
+      <%=f.select :tournament_id, options_for_select( @category_parent_array.map{|c| [c[:name], c[:id]]}),{include_blank:"大会を選択してください"}, { class: "parent_category_box", id: "parent_category_analysis"} %>
+      <div class="school"></div>
+      <%= f.text_area :text, cols: 30 ,rows: 10 %>
+      <%# <%= render 'layouts/error_messages', model: f.object%> %>
+      <%=f.submit value: "SENT",class: "game_record"%>
       <%end%>
       <div class="back">
         <%= link_to "戻る",root_path%>
