--- a/app/assets/stylesheets/resert.css
+++ b/app/assets/stylesheets/resert.css
@@ -3,6 +3,9 @@
    License: none (public domain)
 */
 
+h1 {
+	font-size: 130%;
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
