--- a/app/views/analyses/create.html.erb
+++ b/app/views/analyses/create.html.erb
@@ -3,6 +3,6 @@
     <h3>
     投稿が完了しました
     </h3>
-  <%= link_to "トップページへ戻る",root_path,class: "btn"%>
+  <%= link_to "トップページへ戻る",new_analysis_path,class: "btn"%>
   </div>
 </div>
