--- a/app/assets/stylesheets/analyses.css
+++ b/app/assets/stylesheets/analyses.css
@@ -1,3 +1,34 @@
+.analysis_main {
+  padding: 0 250px;
+}
+
+.content_anali {
+  margin-top: 90px;
+  background-color: #00FF00
+}
+
+.select_main {
+  margin: 20px 0;
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+}
+
+.school {
+  font-size: 30px;
+  text-align: center;
+}
+
+.attack_i,.defensive_i,.pitcher_i,.comprehensive_i {
+  font-size: 20px;
+}
+
+.text {
+  margin: 50px 0;
+}
+
+
+/* new */
 .select {
   margin-top: 20px;
   display: flex;
