--- a/app/views/analyses/new.html.erb
+++ b/app/views/analyses/new.html.erb
@@ -1,6 +1,7 @@
 <div class="contents row">
   <div class="container">
     <%= form_with model: @analysis,local: true do |f|%>
+      <%# <h1>投稿</h1> %>
       <p>大会選択<p>
       <%= f.select :tournament_id, options_for_select( @category_parent_array.map{|c| [c[:name], c[:id]]}),{include_blank:"大会を選択してください"}, { class: "parent_category_box", id: "parent_category_analysis"} %>
       <div class="school">
@@ -24,11 +25,10 @@
         </div>
       </div>
       <%= f.text_area :text, cols: 30 ,rows: 10,placeholder: "分析内容を入力してください" %>
-      <%# <%= render 'layouts/error_messages', model: f.object%>
       <%= f.submit value: "SENT",class: "game_record"%>
     <%end%>
       <div class="back">
-        <%= link_to "戻る",root_path%>
+        <%= link_to "戻る",analyses_path%>
       </div>
   </div>
 </div>
