--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,3 +1,3 @@
-<%= render :partial=>"tweets/tweet"%>
+<%= render :partial=>"tweets/log"%>
 <%= link_to "トップページへ戻る",root_path,class: "return-top"%>
 <%= render :partial=>"tweets/tweet_show"%>
