--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -11,7 +11,10 @@
   <h1>試合記事</h1>
 </div>
 <div class="main-content">
-<%= render :partial=>"tweet"%>
+<%= render partial: "log"%>
+<% if user_signed_in?%>
+  <%= link_to "投稿する", "/tweets/new" ,class: "send_btn"%>
+<% end %>
   <div class="images">
     <div class="image_2">
       <img src="https://kohacu.com/wp-content/uploads/2018/08/kohacu.com_001578_20180807-768x768.png" width=100 height="100">
