--- a/app/views/analyses/new.html.erb
+++ b/app/views/analyses/new.html.erb
@@ -21,7 +21,7 @@
         </div>
         <div class="comprehensive">
           <p>総合力</p>
-          <%= f.select :comprehensive,[["A","A"],["B+","B+"],["B","B"],["C","C"]],include_blank: "選択してください"%>
+          <%= f.select :comprehensive,[["A","A"],["B+","B"],["B","C"],["C","D"]],include_blank: "選択してください"%>
         </div>
       </div>
       <%= f.text_area :text, cols: 30 ,rows: 10,placeholder: "分析内容を入力してください" %>
