--- a/app/views/tournaments/watch.html.erb
+++ b/app/views/tournaments/watch.html.erb
@@ -32,5 +32,17 @@
     <p>C<p>
   <% end %>
 </div>
+
+  <p>総合力<p>
+  <% if avg[:total_num]<66 %>
+    <p>A<p>
+  <% elsif avg[:total_num]>=66 && avg[:total_num]<67 %>
+    <p>B+<p>
+  <% elsif avg[:total_num]>=67 && avg[:total_num]<68 %>
+    <p>B<p>
+  <% else %>
+    <p>C<p>
+  <% end %>
+</div>
   <% end %>
  
