削除ボタン

--- a/app/views/analyses/_show.html.erb
+++ b/app/views/analyses/_show.html.erb
@@ -33,5 +33,8 @@
       <div class="name">
         <%= "投稿者 #{analysis.user.nickname}"%>
       </div>
+      <% if user_signed_in? && current_user.id == analysis.user_id%>
+        <%= link_to "削除","/analyses/#{analysis.id}/",method: :delete,class: "ays_delete" %>
+      <% end %>
     </div>
     <% end %>
