--- a/app/assets/stylesheets/analyses.css
+++ b/app/assets/stylesheets/analyses.css
@@ -4,7 +4,8 @@
 
 .content_anali {
   margin-top: 90px;
-  background-color: #00FF00
+  background-color: #00FF00;
+  position: relative;
 }
 
 .select_main {
@@ -25,6 +26,18 @@
 
 .text {
   margin: 50px 0;
+}
+
+.ays_delete {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.name {
+  position: absolute;
+  bottom:  10px;
+  right: 0;
 }
 
 /* watch */
