--- a/app/views/tournaments/watch.html.erb
+++ b/app/views/tournaments/watch.html.erb
@@ -1,4 +1,6 @@
-<%= render :partial=>"tweets/log"%>
 <%= link_to "トップページへ戻る",analyses_path,class: "return-top"%>
-<%= link_to "平均評価を見る",watch_avg_tournament_path,class: "title" %>
+<div class="go-avg">
+<%= link_to "平均評価を見る",watch_avg_tournament_path,class: "ays-avg" %>
+<p>みんなの集計結果を元にした平均評価を見れます<p>
+</div>
 <%= render partial: "analyses/show"%>
