平均評価　改修

--- a/app/views/tournaments/watch.html.erb
+++ b/app/views/tournaments/watch.html.erb
@@ -1,6 +1,7 @@
 <%= link_to "トップページへ戻る",analyses_path,class: "return-top"%>
 <div class="go-avg">
-<%= link_to "平均評価を見る",watch_avg_tournament_path,class: "ays-avg" %>
-<p>みんなの集計結果を元にした平均評価を見れます<p>
+  <%=@analysis.name%><br>
+  <%= link_to "平均評価を見る",watch_avg_tournament_path,class: "ays-avg" %>
+  <p>みんなの集計結果を元にした平均評価を見れます<p>
 </div>
 <%= render partial: "analyses/show"%>
