--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -12,7 +12,7 @@
     <%= render partial: 'form',locals: {f: f} %>
     <% end %>
     <div class="back">
-      <%= link_to "戻る",root_path%>
+      <%= link_to "戻る",tweets_path%>
     </div>
   </div>
 </div>
