--- a/app/views/tweets/_log.html.erb
+++ b/app/views/tweets/_log.html.erb
@@ -6,3 +6,6 @@
     <%= link_to "新規登録",  new_user_registration_path,class: "up_btn"%>
   </div>
 <% end %>
+<% unless current_page?(root_path)%>
+  <%= link_to "トップページへ戻る",root_path,class: "return-top"%>
+<%end%>
