--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,3 +1,4 @@
 <%= render partial: "/tweets/log"%>
 <%= link_to "試合記事",tweets_path%>
 <%= link_to "戦力分析",analyses_path%>
+<%= link_to "試合予想",forecasts_path%>
