ユーザー削除機能

--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -2,3 +2,6 @@
 <%= link_to "試合記事",tweets_path%>
 <%= link_to "戦力分析",analyses_path%>
 <%= link_to "試合予想",forecasts_path%>
+<% if user_signed_in? && current_user.admin?%>
+<%= link_to "管理者ページ", users_show_admin_users_path%>
+<% end %>
